src/tui/snapshots/tool_executor__tui__tests__tui_empty_entry_render.snap
---
source: src/tui/mod.rs
expression: empty_snapshot
---
┌Sessions & Profiles─────────┐┌No Sessions─────────────────┐
│▶ No Sessions               ││Use tx search to populate   │
│  Wrapped Profile  Run codex││sessions.                   │
│                            ││                            │
│                            ││                            │
│                            ││                            │
│                            ││                            │
│                            ││                            │
│                            ││                            │
│                            ││                            │
│                            ││                            │
│                            ││                            │
└────────────────────────────┘└────────────────────────────┘
┌──────────────────────────────────────────────────────────┐
│ Run tx index to refresh listings.                        │
└──────────────────────────────────────────────────────────┘
