src/tui/snapshots/tool_executor__tui__tests__tui_profile_entry_render.snap
---
source: src/tui/mod.rs
expression: profile_snapshot
---
┌Sessions & Profiles─────────┐┌Wrapped Profile─────────────┐
│  No Sessions               ││Provider: codex             │
│▶ Wrapped Profile  Run codex││                            │
│                            ││Run codex with helpers      │
│                            ││                            │
│                            ││Tags: team, demo            │
│                            ││                            │
│                            ││                            │
│                            ││                            │
│                            ││                            │
│                            ││                            │
│                            ││                            │
└────────────────────────────┘└────────────────────────────┘
┌──────────────────────────────────────────────────────────┐
│ ↑/↓ scroll  •  Tab emit  •  Enter run  •  Ctrl-P cycle pr│
└──────────────────────────────────────────────────────────┘
