src/tui/snapshots/tool_executor__tui__tests__tui_status_overlay_render.snap
---
source: src/tui/mod.rs
expression: overlay_snapshot
---
┌Sessions & Profiles─────────┐┌Wrapped Profile─────────────┐
│  No Sessions               ││Provider: codex             │
│▶ Wrapped Profile  Run codex││                            │
│                            ││Run codex with helpers      │
│                            ││                            │
│                            ││Tags: team, demo            │
└────────────────────────────┘└────────────────────────────┘
┌──────────────────────────────────────────────────────────┐
│ provider: codex                                          │
└──────────────────────────────────────────────────────────┘
